--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -57,7 +57,7 @@ ul.sideNav {
 }
 
 h2 {
-  padding:0;
+  padding: 0;
   margin: 0;
 }
 
@@ -120,8 +120,9 @@ ul.pageNav {
 $tags: (vip, mod, admin, dev, super, owner);
 @each $tag in $tags {
   .tag-#{$tag}:before {
-    content: url('../images/tags/#{$tag}.png');
+    content: url('../images/tags/#{$tag}.png') ' ';
     display: inline-block;
+    white-space: pre;
     // todo add background images instead of content text
   }
 }
