--- a/media/css/main.css
+++ b/media/css/main.css
@@ -191,3 +191,39 @@ ul.pageNav.bottom li:last-child a {
   display: inline-block;
   white-space: pre;
 }
+
+/* line 131, ../scss/main.scss */
+#chatbox .chats {
+  font-size: 0.75em;
+  border: 1px solid #d8d8d8;
+  border-bottom: none;
+  -webkit-border-radius: 0.5em 0.5em 0 0;
+  -moz-border-radius: 0.5em 0.5em 0 0;
+  -ms-border-radius: 0.5em 0.5em 0 0;
+  -o-border-radius: 0.5em 0.5em 0 0;
+  border-radius: 0.5em 0.5em 0 0;
+  height: 170px;
+  padding: 8px;
+  overflow: scroll;
+  overflow-x: hidden;
+  background: #fff;
+}
+/* line 144, ../scss/main.scss */
+#chatbox .chat a.userLink:before {
+  line-height: 1.0;
+  vertical-align: middle;
+}
+/* line 149, ../scss/main.scss */
+#chatbox input {
+  width: 100%;
+  border: 1px solid #d8d8d8;
+  padding: 4px 10px;
+  -webkit-box-shadow: inset 0px 5px 10px rgba(0, 0, 0, 0.125);
+  -moz-box-shadow: inset 0px 5px 10px rgba(0, 0, 0, 0.125);
+  box-shadow: inset 0px 5px 10px rgba(0, 0, 0, 0.125);
+  -webkit-border-radius: 0 0 0.5em 0.5em;
+  -moz-border-radius: 0 0 0.5em 0.5em;
+  -ms-border-radius: 0 0 0.5em 0.5em;
+  -o-border-radius: 0 0 0.5em 0.5em;
+  border-radius: 0 0 0.5em 0.5em;
+}
