bbcode code tag fix -chatbox audio

--- a/media/css/main.css
+++ b/media/css/main.css
@@ -204,7 +204,7 @@ ul.pageNav.bottom li:last-child a {
   border-radius: 0.5em 0.5em 0 0;
   height: 170px;
   padding: 8px;
-  overflow: scroll;
+  overflow: auto;
   overflow-x: hidden;
   background: #fff;
 }
