--- a/media/scss/forums.scss
+++ b/media/scss/forums.scss
@@ -85,7 +85,7 @@
         margin: 1px;
         padding: 2px;
         min-width: 200px;
-        min-height:46px;
+        min-height: 46px;
 
         .avatar {
           vertical-align: top;
@@ -110,6 +110,7 @@
         }
         .userLink {
           color: #4b4b4b;
+          font-weight: bold;
         }
         .viewLink {
           color: #385464;
