--- a/media/scss/header.scss
+++ b/media/scss/header.scss
@@ -45,7 +45,7 @@ h1 {
       color: $orange;
       font-weight: bold;
       vertical-align: top;
-      text-shadow: 0 0 0.25em rgba(0, 0, 0, .1);
+      //text-shadow: 0 0 0.25em rgba(0, 0, 0, .1);
     }
 
     &:before {
