--- a/media/css/main.css
+++ b/media/css/main.css
@@ -13,23 +13,28 @@ body {
   background: -moz-radial-gradient(#ffffff, #c3c3c3);
   background: -o-radial-gradient(#ffffff, #c3c3c3);
   background: radial-gradient(#ffffff, #c3c3c3);
+  background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 100, color-stop(0%, #ffffff), color-stop(100%, rgba(255, 255, 255, 0))) #c3c3c3;
+  background: -webkit-radial-gradient(#ffffff, rgba(255, 255, 255, 0)) #c3c3c3;
+  background: -moz-radial-gradient(#ffffff, rgba(255, 255, 255, 0)) #c3c3c3;
+  background: -o-radial-gradient(#ffffff, rgba(255, 255, 255, 0)) #c3c3c3;
+  background: radial-gradient(#ffffff, rgba(255, 255, 255, 0)) #c3c3c3;
   padding-top: 50px;
 }
 
-/* line 9, ../scss/main.scss */
+/* line 11, ../scss/main.scss */
 #container {
   width: 900px;
   margin: 0 auto;
   text-align: left;
 }
 
-/* line 16, ../scss/main.scss */
+/* line 18, ../scss/main.scss */
 .alert {
   padding: 0.5em 1em;
   margin-bottom: 1em;
 }
 
-/* line 21, ../scss/main.scss */
+/* line 23, ../scss/main.scss */
 .content {
   background: #fff;
   border: 1px solid #dfdfdf;
@@ -41,48 +46,48 @@ body {
   border-radius: 0 0.5em 0 0;
 }
 
-/* line 29, ../scss/main.scss */
+/* line 31, ../scss/main.scss */
 .clr {
   clear: both;
 }
 
-/* line 33, ../scss/main.scss */
+/* line 35, ../scss/main.scss */
 ul.sideNav {
   margin: 0;
   padding: 0;
   display: inline-block;
   position: relative;
 }
-/* line 39, ../scss/main.scss */
+/* line 41, ../scss/main.scss */
 ul.sideNav li {
   display: inline-block;
   position: absolute;
   margin-bottom: 7px;
 }
-/* line 44, ../scss/main.scss */
+/* line 46, ../scss/main.scss */
 ul.sideNav li a {
   color: #fff;
   padding: 12px 16px 12px 28px;
 }
-/* line 49, ../scss/main.scss */
+/* line 51, ../scss/main.scss */
 ul.sideNav li:after {
   position: absolute;
   top: -7px;
   left: 0;
   content: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABEAAAAHCAMAAADZPFZOAAAAM1BMVEX///93d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3d3cFyiH2AAAAEHRSTlMA+oQSuzjld/kMtP4u32734uF19AAAAC5JREFUeF5VyLcRwDAAAzEqZ9n7T6tj+SghxfCDpJQ5VirHWsfYmAtj+3Dsfp4HOYMEea3gTjEAAAAASUVORK5CYII=");
 }
-/* line 56, ../scss/main.scss */
+/* line 58, ../scss/main.scss */
 ul.sideNav li.selected:after {
   content: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAHCAMAAAA2/j1wAAAAM1BMVEUSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhMSEhPJKAuDAAAAEHRSTlMAhPoSuzjld/kMtP4u3273KDpR6AAAAC9JREFUeF5dyLcBACAMAzCH2sv/10KGDEajIO4QwAeOJyYKlcsXqK1bmDEp1NoaFymYBHmq1F0xAAAAAElFTkSuQmCC");
 }
 
-/* line 62, ../scss/main.scss */
+/* line 64, ../scss/main.scss */
 h2 {
   padding: 0;
   margin: 0;
 }
 
-/* line 67, ../scss/main.scss */
+/* line 69, ../scss/main.scss */
 ul.pageNav {
   display: inline-block;
   background: #3d628c;
@@ -98,37 +103,37 @@ ul.pageNav {
   margin: 0;
   padding: 0;
 }
-/* line 78, ../scss/main.scss */
+/* line 80, ../scss/main.scss */
 ul.pageNav.right {
   float: right;
 }
-/* line 82, ../scss/main.scss */
+/* line 84, ../scss/main.scss */
 ul.pageNav li {
   display: inline-block;
 }
-/* line 85, ../scss/main.scss */
+/* line 87, ../scss/main.scss */
 ul.pageNav li a {
   display: inline-block;
   background: #fff;
 }
-/* line 90, ../scss/main.scss */
+/* line 92, ../scss/main.scss */
 ul.pageNav li a, ul.pageNav li span {
   padding: 0.25em 0.5em;
 }
-/* line 94, ../scss/main.scss */
+/* line 96, ../scss/main.scss */
 ul.pageNav li.firstPage a:before {
   content: '<< ';
 }
-/* line 97, ../scss/main.scss */
+/* line 99, ../scss/main.scss */
 ul.pageNav li.lastPage a:after {
   content: ' >>';
 }
-/* line 101, ../scss/main.scss */
+/* line 103, ../scss/main.scss */
 ul.pageNav li.curPage a {
   background: #3d628c;
   color: #d5d5d5;
 }
-/* line 106, ../scss/main.scss */
+/* line 108, ../scss/main.scss */
 ul.pageNav li:last-child a {
   -webkit-border-radius: 0 0.125em 0 0;
   -moz-border-radius: 0 0.125em 0 0;
@@ -136,7 +141,7 @@ ul.pageNav li:last-child a {
   -o-border-radius: 0 0.125em 0 0;
   border-radius: 0 0.125em 0 0;
 }
-/* line 111, ../scss/main.scss */
+/* line 113, ../scss/main.scss */
 ul.pageNav.bottom {
   -webkit-border-radius: 0 0 0.25em 0.25em;
   -moz-border-radius: 0 0 0.25em 0.25em;
@@ -146,7 +151,7 @@ ul.pageNav.bottom {
   border: 1px solid #3d628c;
   border-top: none;
 }
-/* line 116, ../scss/main.scss */
+/* line 118, ../scss/main.scss */
 ul.pageNav.bottom li:last-child a {
   -webkit-border-radius: 0 0 0.125em 0;
   -moz-border-radius: 0 0 0.125em 0;
@@ -155,49 +160,49 @@ ul.pageNav.bottom li:last-child a {
   border-radius: 0 0 0.125em 0;
 }
 
-/* line 125, ../scss/main.scss */
+/* line 127, ../scss/main.scss */
 .tag-vip:before {
   content: url("../images/tags/vip.png") " ";
   display: inline-block;
   white-space: pre;
 }
 
-/* line 125, ../scss/main.scss */
+/* line 127, ../scss/main.scss */
 .tag-mod:before {
   content: url("../images/tags/mod.png") " ";
   display: inline-block;
   white-space: pre;
 }
 
-/* line 125, ../scss/main.scss */
+/* line 127, ../scss/main.scss */
 .tag-admin:before {
   content: url("../images/tags/admin.png") " ";
   display: inline-block;
   white-space: pre;
 }
 
-/* line 125, ../scss/main.scss */
+/* line 127, ../scss/main.scss */
 .tag-dev:before {
   content: url("../images/tags/dev.png") " ";
   display: inline-block;
   white-space: pre;
 }
 
-/* line 125, ../scss/main.scss */
+/* line 127, ../scss/main.scss */
 .tag-super:before {
   content: url("../images/tags/super.png") " ";
   display: inline-block;
   white-space: pre;
 }
 
-/* line 125, ../scss/main.scss */
+/* line 127, ../scss/main.scss */
 .tag-owner:before {
   content: url("../images/tags/owner.png") " ";
   display: inline-block;
   white-space: pre;
 }
 
-/* line 134, ../scss/main.scss */
+/* line 136, ../scss/main.scss */
 #chatbox .chats {
   font-size: 0.75em;
   border: 1px solid #d8d8d8;
@@ -213,12 +218,12 @@ ul.pageNav.bottom li:last-child a {
   overflow-x: hidden;
   background: #fff;
 }
-/* line 147, ../scss/main.scss */
+/* line 149, ../scss/main.scss */
 #chatbox .chat a.userLink:before {
   line-height: 1.0;
   vertical-align: middle;
 }
-/* line 152, ../scss/main.scss */
+/* line 154, ../scss/main.scss */
 #chatbox input {
   width: 100%;
   border: 1px solid #d8d8d8;
@@ -233,7 +238,7 @@ ul.pageNav.bottom li:last-child a {
   border-radius: 0 0 0.5em 0.5em;
 }
 
-/* line 163, ../scss/main.scss */
+/* line 165, ../scss/main.scss */
 .missing42 {
   width: 42px;
   height: 42px;
