--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -3,6 +3,8 @@
 body {
   text-align: center;
   @include background(radial-gradient(#fff, #c3c3c3));
+  // way better w/r/t banding:
+  @include background(radial-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0)) #c3c3c3);
   padding-top: 50px;
 }
 
@@ -161,8 +163,8 @@ $tags: (vip, mod, admin, dev, super, owner);
 }
 
 .missing42 {
-  width:42px;
-  height:42px;
-  display:inline-block;
-  background:url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACoAAAAqAQMAAAD/DVsYAAAABlBMVEX4APgAAAAfdBzzAAAAJUlEQVR4Xs3OoQEAAARFwScZy+p/LAlDEKSrB5HW2tLyghselgat1Xgl/EfvxwAAAABJRU5ErkJggg==') no-repeat;
+  width: 42px;
+  height: 42px;
+  display: inline-block;
+  background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACoAAAAqAQMAAAD/DVsYAAAABlBMVEX4APgAAAAfdBzzAAAAJUlEQVR4Xs3OoQEAAARFwScZy+p/LAlDEKSrB5HW2tLyghselgat1Xgl/EfvxwAAAABJRU5ErkJggg==') no-repeat;
 }
