--- a/media/scss/forums.scss
+++ b/media/scss/forums.scss
@@ -157,7 +157,7 @@ table.threads {
       padding-left: 32px;
       font-size: 1.25em;
 
-      a {
+      span {
         max-width: 275px;
         display: inline-block;
       }
@@ -174,7 +174,7 @@ table.threads {
     &.sticky {
       background-color: #f2ecb6;
 
-      .title:before {
+      .title a:before {
         content: 'Sticky: ';
         font-weight: bold;
         text-transform: uppercase;
