--- a/media/scss/threads.scss
+++ b/media/scss/threads.scss
@@ -11,6 +11,17 @@
   //@include background-image(linear-gradient(left, #e7e7e7, #e7e7e7 142px,#f2f2f2 143px, #ffffff));
   border-bottom: 1px solid #ddd;
   position: relative;
+
+  &:target:before {
+    content: '\25b6';
+    position: absolute;
+    right: 864px;
+    display: inline-block;
+    padding:0 1px 0 0;
+    font-size:1.5em;
+    top:0;
+    line-height: 1.0;
+  }
 }
 
 .editLink, .quoteLink {
@@ -37,7 +48,7 @@
   width: 142px;
   display: inline-block;
   background: #e7e7e7;
-  padding: 12px;
+  padding: 0 12px 0 6px;
 
   .postTime {
     font-size: 0.75em;
