--- a/media/css/main.css
+++ b/media/css/main.css
@@ -424,3 +424,28 @@ ul.pageNav.bottom li:last-child a {
     transform: rotate(-5deg);
   }
 }
+
+/* line 238, ../scss/main.scss */
+.popupContainer {
+  text-align: center;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.3);
+  padding: 100px 0;
+  z-index: 9998;
+}
+
+/* line 250, ../scss/main.scss */
+.popup {
+  padding: 1em;
+  width: 80%;
+  max-width: 600px;
+  min-height: 100px;
+  margin: 0 auto;
+  z-index: 9999;
+  top: 100px;
+  background: #eee;
+}
