--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -235,3 +235,25 @@ $tags: (vip, mod, admin, dev, super, owner);
   }
 }
 
+.popupContainer {
+  text-align: center;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(#000, 0.3);
+  padding: 100px 0;
+  z-index: 9998;
+}
+
+.popup {
+  padding: 1em;
+  width: 80%;
+  max-width: 600px;
+  min-height: 100px;
+  margin: 0 auto;
+  z-index: 9999;
+  top: 100px;
+  background: #eee;
+}
