--- a/media/css/main.css
+++ b/media/css/main.css
@@ -220,19 +220,27 @@ ul.pageNav.bottom li:last-child a {
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACoAAAAqAQMAAAD/DVsYAAAABlBMVEX4APgAAAAfdBzzAAAAJUlEQVR4Xs3OoQEAAARFwScZy+p/LAlDEKSrB5HW2tLyghselgat1Xgl/EfvxwAAAABJRU5ErkJggg==") no-repeat;
 }
 
-/* line 147, ../scss/main.scss */
+/* line 146, ../scss/main.scss */
+.missing52 {
+  width: 42px;
+  height: 42px;
+  display: inline-block;
+  background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADQAAAA0AQMAAAD/tomoAAAABlBMVEX4APgAAAAfdBzzAAAAKUlEQVR4Xt3PQQkAAAjAwIEBjGR1IxlAUEvoQxjce6DlUrHmZAlXfvtpTQiymQ2xdWAAAAAASUVORK5CYII=") no-repeat;
+}
+
+/* line 153, ../scss/main.scss */
 .modDropdown {
   display: inline-block;
   position: relative;
 }
-/* line 151, ../scss/main.scss */
+/* line 157, ../scss/main.scss */
 .modDropdown .star {
   width: 16px;
   height: 16px;
   display: inline-block;
   background: #a00;
 }
-/* line 163, ../scss/main.scss */
+/* line 169, ../scss/main.scss */
 .modDropdown ul {
   display: none;
   position: absolute;
@@ -246,25 +254,25 @@ ul.pageNav.bottom li:last-child a {
   background: #eee;
   border: 1px solid #000;
 }
-/* line 177, ../scss/main.scss */
+/* line 183, ../scss/main.scss */
 .modDropdown ul li a {
   display: block;
   white-space: pre;
   padding: 0 4px;
 }
-/* line 182, ../scss/main.scss */
+/* line 188, ../scss/main.scss */
 .modDropdown ul li ~ li {
   border-top: 1px solid #000;
 }
 
 @-moz-keyframes evilPulse {
-  /* line 190, ../scss/main.scss */
+  /* line 196, ../scss/main.scss */
   from {
     background-color: #c00;
     box-shadow: 0 0 1em #cc0000;
   }
 
-  /* line 194, ../scss/main.scss */
+  /* line 200, ../scss/main.scss */
   to {
     background-color: #822;
     box-shadow: 0 0 1em #880000;
@@ -272,13 +280,13 @@ ul.pageNav.bottom li:last-child a {
 }
 
 @-webkit-keyframes evilPulse {
-  /* line 190, ../scss/main.scss */
+  /* line 196, ../scss/main.scss */
   from {
     background-color: #c00;
     box-shadow: 0 0 1em #cc0000;
   }
 
-  /* line 194, ../scss/main.scss */
+  /* line 200, ../scss/main.scss */
   to {
     background-color: #822;
     box-shadow: 0 0 1em #880000;
@@ -286,13 +294,13 @@ ul.pageNav.bottom li:last-child a {
 }
 
 @-o-keyframes evilPulse {
-  /* line 190, ../scss/main.scss */
+  /* line 196, ../scss/main.scss */
   from {
     background-color: #c00;
     box-shadow: 0 0 1em #cc0000;
   }
 
-  /* line 194, ../scss/main.scss */
+  /* line 200, ../scss/main.scss */
   to {
     background-color: #822;
     box-shadow: 0 0 1em #880000;
@@ -300,13 +308,13 @@ ul.pageNav.bottom li:last-child a {
 }
 
 @-ms-keyframes evilPulse {
-  /* line 190, ../scss/main.scss */
+  /* line 196, ../scss/main.scss */
   from {
     background-color: #c00;
     box-shadow: 0 0 1em #cc0000;
   }
 
-  /* line 194, ../scss/main.scss */
+  /* line 200, ../scss/main.scss */
   to {
     background-color: #822;
     box-shadow: 0 0 1em #880000;
@@ -314,13 +322,13 @@ ul.pageNav.bottom li:last-child a {
 }
 
 @keyframes evilPulse {
-  /* line 190, ../scss/main.scss */
+  /* line 196, ../scss/main.scss */
   from {
     background-color: #c00;
     box-shadow: 0 0 1em #cc0000;
   }
 
-  /* line 194, ../scss/main.scss */
+  /* line 200, ../scss/main.scss */
   to {
     background-color: #822;
     box-shadow: 0 0 1em #880000;
@@ -328,13 +336,13 @@ ul.pageNav.bottom li:last-child a {
 }
 
 @-moz-keyframes evilRotate {
-  /* line 201, ../scss/main.scss */
+  /* line 207, ../scss/main.scss */
   from {
     -moz-transform: rotate(5deg);
     transform: rotate(5deg);
   }
 
-  /* line 204, ../scss/main.scss */
+  /* line 210, ../scss/main.scss */
   to {
     -moz-transform: rotate(-5deg);
     transform: rotate(-5deg);
@@ -342,13 +350,13 @@ ul.pageNav.bottom li:last-child a {
 }
 
 @-webkit-keyframes evilRotate {
-  /* line 201, ../scss/main.scss */
+  /* line 207, ../scss/main.scss */
   from {
     -webkit-transform: rotate(5deg);
     transform: rotate(5deg);
   }
 
-  /* line 204, ../scss/main.scss */
+  /* line 210, ../scss/main.scss */
   to {
     -webkit-transform: rotate(-5deg);
     transform: rotate(-5deg);
@@ -356,13 +364,13 @@ ul.pageNav.bottom li:last-child a {
 }
 
 @-o-keyframes evilRotate {
-  /* line 201, ../scss/main.scss */
+  /* line 207, ../scss/main.scss */
   from {
     -o-transform: rotate(5deg);
     transform: rotate(5deg);
   }
 
-  /* line 204, ../scss/main.scss */
+  /* line 210, ../scss/main.scss */
   to {
     -o-transform: rotate(-5deg);
     transform: rotate(-5deg);
@@ -370,13 +378,13 @@ ul.pageNav.bottom li:last-child a {
 }
 
 @-ms-keyframes evilRotate {
-  /* line 201, ../scss/main.scss */
+  /* line 207, ../scss/main.scss */
   from {
     -ms-transform: rotate(5deg);
     transform: rotate(5deg);
   }
 
-  /* line 204, ../scss/main.scss */
+  /* line 210, ../scss/main.scss */
   to {
     -ms-transform: rotate(-5deg);
     transform: rotate(-5deg);
@@ -384,18 +392,18 @@ ul.pageNav.bottom li:last-child a {
 }
 
 @keyframes evilRotate {
-  /* line 201, ../scss/main.scss */
+  /* line 207, ../scss/main.scss */
   from {
     transform: rotate(5deg);
   }
 
-  /* line 204, ../scss/main.scss */
+  /* line 210, ../scss/main.scss */
   to {
     transform: rotate(-5deg);
   }
 }
 
-/* line 209, ../scss/main.scss */
+/* line 215, ../scss/main.scss */
 .popupContainer {
   text-align: center;
   position: fixed;
@@ -408,7 +416,7 @@ ul.pageNav.bottom li:last-child a {
   z-index: 9998;
 }
 
-/* line 221, ../scss/main.scss */
+/* line 227, ../scss/main.scss */
 .popup {
   padding: 1em;
   width: 80%;
