--- a/media/scss/forums.scss
+++ b/media/scss/forums.scss
@@ -52,6 +52,10 @@
         float: left;
         text-align: left;
 
+        &.noSubforums {
+          margin-top: 8px;
+        }
+
         .forumName, .description {
           display: inline-block;
           line-height: 1.0;
@@ -67,7 +71,7 @@
         .description {
           font-size: 0.85em;
           clear: left;
-          margin:4px 0 0 0;
+          margin: 4px 0 0 0;
         }
 
         ul.subforums {
@@ -78,7 +82,7 @@
           padding: 0;
           margin: 4px 0 0 0;
           line-height: 1.0;
-          font-size:0.8em;
+          font-size: 0.8em;
 
           li {
             display: inline-block;
@@ -88,7 +92,7 @@
               padding: 0.1em 0.5em;
               background: #2c4b6d;
               //border: 1px solid rgba(#fff, 0.25);
-              box-shadow:0 0 0.25em rgba(#fff, 0.25);
+              box-shadow: 0 0 0.25em rgba(#fff, 0.25);
               @include border-radius(0.25em);
               color: #fff;
 
