--- a/media/css/forums.css
+++ b/media/css/forums.css
@@ -230,19 +230,20 @@ table.threads tr.threadSeen .title {
 table.threads tr.closed .title {
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABEAAAARBAMAAADJQ1rJAAAAJ1BMVEX///////////////////////////////////////////91dXX///+XIzTAAAAAC3RSTlPe4bb9SqbfuFO54EyritgAAABWSURBVHhefcyhEYAwEETRLSAiBUQwQyMY+sDgKSACSxdYatg45G1RXGbOMfDVUx/zgt46YRQp6R5QTGrOjBQCEr2Xmv2JDBkZF3mfKqGMGtpwnOhd+wNkWFdv4gSALAAAAABJRU5ErkJggg==") no-repeat 4px center;
 }
-/* line 215, ../scss/forums.scss */
+/* line 214, ../scss/forums.scss */
 table.threads tr.closed {
   opacity: 0.6;
 }
-/* line 218, ../scss/forums.scss */
+/* line 217, ../scss/forums.scss */
 table.threads tr.closed .title a:before {
   content: 'Locked: ';
   font-weight: bold;
   text-transform: uppercase;
 }
-/* line 225, ../scss/forums.scss */
+/* line 224, ../scss/forums.scss */
 table.threads tr.sticky {
   background-color: #f2ecb6;
+  opacity: 1.0;
 }
 /* line 228, ../scss/forums.scss */
 table.threads tr.sticky .title a:before {
