--- a/media/scss/forums.scss
+++ b/media/scss/forums.scss
@@ -208,9 +208,8 @@ table.threads {
     }
 
     &.closed .title {
-      background:url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABEAAAARBAMAAADJQ1rJAAAAJ1BMVEX///////////////////////////////////////////91dXX///+XIzTAAAAAC3RSTlPe4bb9SqbfuFO54EyritgAAABWSURBVHhefcyhEYAwEETRLSAiBUQwQyMY+sDgKSACSxdYatg45G1RXGbOMfDVUx/zgt46YRQp6R5QTGrOjBQCEr2Xmv2JDBkZF3mfKqGMGtpwnOhd+wNkWFdv4gSALAAAAABJRU5ErkJggg==') no-repeat 4px center;
+      background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABEAAAARBAMAAADJQ1rJAAAAJ1BMVEX///////////////////////////////////////////91dXX///+XIzTAAAAAC3RSTlPe4bb9SqbfuFO54EyritgAAABWSURBVHhefcyhEYAwEETRLSAiBUQwQyMY+sDgKSACSxdYatg45G1RXGbOMfDVUx/zgt46YRQp6R5QTGrOjBQCEr2Xmv2JDBkZF3mfKqGMGtpwnOhd+wNkWFdv4gSALAAAAABJRU5ErkJggg==') no-repeat 4px center;
     }
-
 
     &.closed {
       opacity: 0.6;
@@ -224,6 +223,7 @@ table.threads {
 
     &.sticky {
       background-color: #f2ecb6;
+      opacity: 1.0;
 
       .title a:before {
         content: 'Sticky: ';
